# ardavetv

./: README.md  index.html
leia/repository.ardavetv/: addon.xml
leia/zips/: addons.xml  addons.xml.md5
leia/zips/repository.ardavetv/: addon.xml
matrix/repository.ardavetv/: addon.xml
matrix/zips/: addons.xml  addons.xml.md5
matrix/zips/repository.ardavetv/: addon.xml
nexus/pvr.dispatcharr/: addon.xml
nexus/pvr.dispatcharr/resources/language/resource.language.en_gb/: strings.po
nexus/pvr.disptacharr-1.2.1/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
nexus/pvr.disptacharr-1.2.1/src/: xtream_client.cpp
nexus/pvr.disptacharr-master/: addon.xml.in
nexus/pvr.disptacharr-master/pvr.dispatcharr/: addon.xml.in
nexus/pvr.disptacharr-master/pvr.dispatcharr/resources/: settings.xml
nexus/repository.ardavetv/: addon.xml
nexus/skin.myqq/xml/: Home.xml
nexus/skin.xonfluence/colors/: defaults.xml
nexus/skin.xonfluence/xml/: Font.xml
nexus/zips/: addons.xml  addons.xml.md5
nexus/zips/pvr.dispatcharr/: addon.xml
nexus/zips/repository.ardavetv/: addon.xml
nexus/zips/skin.xonfluence/: addon.xml
omega/plugin.program.omobatvwizard19/: addon.xml
omega/plugin.program.omobatvwizard19/resources/: settings.xml
omega/plugin.program.omobatvwizard19/resources/libs/: db.py  debridit.py  install.py  loginit.py  traktit.py  zipfile.py
omega/plugin.program.omobatvwizard19/resources/libs/common/: logging.py
omega/plugin.video.seren/: addon.xml
omega/plugin.video.seren/resources/lib/modules/: globals.py
omega/plugin.video.youtube/: addon 2.xml  addon.xml
omega/pvr.dispatcharr/resources/language/resource.language.pt_pt/: strings.po
omega/pvr.disptacharr-1.2.1/: CMakeLists.txt
omega/pvr.disptacharr-1.2.1/depends/common/pugixml/: flags.txt
omega/pvr.disptacharr-1.2.1/scripts/: check-syntax.sh
omega/pvr.disptacharr-1.2.1/src/: dispatcharr_client.h
omega/pvr.disptacharr-master/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
omega/pvr.disptacharr-master/.github/ISSUE_TEMPLATE/: config.yml
omega/pvr.disptacharr-master/.github/workflows/: release.yml
omega/pvr.disptacharr-master/pvr.dispatcharr/resources/language/resource.language.pt_pt/: strings.po
omega/pvr.disptacharr-master/src/: addon.cpp  dispatcharr_client.cpp  xtream_client.h
omega/repository.ardavetv/: addon.xml
omega/skin.myqq/: addon.xml
omega/skin.myqq/xml/: DialogAddonInfo.xml  DialogPVRInfo-new.xml  DialogPVRInfo.xml  DialogSeekBar.xml  Home copy.xml  Home.xml  Includes.xml  Includes_Buttons.xml  MyGames.xml  MyPVRGuide.xml  MyVideoNav.xml  Settings.xml  SkinSettings copy.xml  SkinSettings.xml  Variables.xml  VideoOSD.xml  View_500_Wall.xml  View_50_List.xml  View_51_Poster.xml  View_53_Shift.xml  View_54_InfoWall.xml
omega/skin.xonfluence/xml/: DialogBusy.xml  Home.xml
omega/zips/: addons.xml  addons.xml.md5
omega/zips/pvr.disptacharr-1.2.1/: addon.xml
omega/zips/repository.ardavetv/: addon.xml
omega/zips/skin.myqq/: addon.xml
